--- a/mongodb/manifest.yaml
+++ b/mongodb/manifest.yaml
@@ -45,12 +45,13 @@ spec:
   template:
     metadata:
       labels:
-        app: nginx
-        purpose: stateful-demo # has to match .spec.selector.matchLabels
-    spec:
+        project: roboshop
+        component: mongodb
+        tier: db # has to match .spec.selector.matchLabels
+    spec: 
       containers:
-      - name: nginx
-        image: nginx
+      - name: mongodb
+        image: ramvelcheti/mongodb:v1
         ports:
         - containerPort: 80
           name: web
